# One-Shot-Gesture-Recognition

./: README.md  define_language.py
ros_porting/camera_node/: package.xml  setup.py
ros_porting/camera_node/camera_node/: gesture_recognition_node.py  gesture_recognizer.py  hand_detection_node.py  pose_detection_node.py
ros_porting/camera_node/camera_node/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros_porting/camera_node/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros_porting/camera_node/install/camera_node/lib/camera_node/: gesture_recognition_node  hand_detection_node  pose_detection_node  visualization_node
ros_porting/camera_node/install/camera_node/share/camera_node/: package.sh
ros_porting/camera_node/install/camera_node/share/camera_node/launch/: online_osg_launch.py
ros_porting/camera_node/launch/: backup_online_osg_launch.py  online_osg_launch.py
ros_porting/camera_node/resource/: g4.json
ros_porting/keypoints_interfaces/: CMakeLists.txt  package.xml
ros_porting/keypoints_interfaces/msg/: HandKeypointsArray.msg  PoseKeypointsArray.msg
