<?xml version="1.0"?>
<package format="3">
  <name>keypoints_interfaces</name>
  <version>0.0.0</version>
  <description>Custom message package</description>

  <maintainer email="rjjoshixyz@gmail.com">rishikeshjoshi</maintainer>
  <license>Apache License 2.0</license>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
  </export>
</package>
